testsuite/tests/typecheck/should_fail/tcfail017.alan
expression_by_reference() : proc
  foo(b : byte, i : reference int) : proc
  { i = 3; }
{ foo('i', 1+5); }
